update using basic css
just a small test

--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
 
 </head>
 
-
-
+body {
+  background-color:black;
+}
+p {
+  color: green;
+  text-align: left;
+}
+                                                                       
 <body>
-
+welcome
+<p> paragraph </p>
 
    
 </body>
