--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 </head>
 
+<style>
 body {
   background-color:black;
 }
@@ -39,6 +40,10 @@ p {
   color: green;
   text-align: left;
 }
+
+
+</style>
+
                                                                        
 <body>
 welcome
