--- a/index.html
+++ b/index.html
@@ -34,20 +34,30 @@
 
 <style>
 body {
-  background-color:black;
+    color: green;
+    text-align: left;
+    background-color:black;
 }
 p {
-  color: green;
-  text-align: left;
+    color: green;
+    text-align: left;
 }
-
+a {
+  
+}
+a:link {
+  color: hotpink;
+}
+a:visited {
+  color: rgb(168, 15, 173);
+}
 
 </style>
 
                                                                        
 <body>
-welcome
-<p> paragraph </p>
+> welcome...
+<p>>Please review your<a href="jakabe.github.io/shadowrunpages/pages/briefing.html">briefing package</a></p>
 
    
 </body>
