--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
 
 <style>
 body {
-    color: green;
+    color: #20C20E;
     text-align: left;
     background-color:black;
 }
 p {
-    color: green;
+    color: #20C20E;
     text-align: left;
 }
 a {
@@ -57,7 +57,7 @@ a:visited {
                                                                        
 <body>
 > welcome...
-<p>>Please review your<a href="jakabe.github.io/shadowrunpages/pages/briefing.html">briefing package</a></p>
+<p>>Please review your <a href="https://jakabe.github.io/shadowrunpages/pages/briefing.html">briefing package</a></p>
 
    
 </body>
