--- a/pages/briefing.html
+++ b/pages/briefing.html
@@ -13,17 +13,33 @@
 </head>
   <style>
 body {
-  background-color:black;
+    color: #20C20E;
+    text-align: left;
+    background-color:black;
 }
 p {
-  color: green;
-  text-align: left;
+    color: #20C20E;
+    text-align: left;
 }
-
+a {
+  
+}
+a:link {
+  color: hotpink;
+}
+a:visited {
+  color: rgb(168, 15, 173);
+}
 
 </style>
   
 <body>
+Briefing Package
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang.html">common slang</a></p>
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang.html">common slang</a></p>
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang.html">common slang</a></p>
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang.html">common slang</a></p>
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang.html">common slang</a></p>
 
 </body>
 </html>
