--- a/pages/slang.html
+++ b/pages/slang.html
@@ -38,114 +38,114 @@ a:visited {
 
 <p>
 >Shadow Slang
-
->breeder n. Ork slang for a “normal” human.
->buzz v. Go away. Buzz off.
->chill adj. Good, cool, acceptable.
->chip truth n. A fact or honest statement.
->chipped adj. Senses, skills, reflexes, muscles, and so on, enhanced
-by cyberware.
->chrome n. Cyberware, especially obvious enhancements.
->chummer n. Friend, used in the same sense as “pal” or “buddy.”
->clip n. A box magazine for a firearm.
->comm n. Short for commlink, your phone, handheld computer, music
-player, game device, and more in the palm of your hand.
->corp n. Corporation. adj. Corporate.
->cred n. Money. Reputation, especially good reputation.
->dandelion eater n. (vulgar) An elf.
->dataslave n. Corporate decker or other data-processing employee.
->datasteal n. Theft of data from a computer, usually by decking.
->deck n. A cyberdeck. v. To use a cyberdeck, usually illegally.
->decker n. A person who illegally uses a cyberdeck.
->deckhead n. Simsense abuser.
->drek n. (vulgar) Feces. A common curse word.
->dump v. To be involuntarily ejected from the Matrix.
->dumpshock n. The painful sensation of being forcibly ejected from the
-Matrix while deeply involved in multi-sensory interactions.
->exec n. A corporate executive.
->frag v. (vulgar) Common swear word referring to the act of copulation.
->fragged adj. (vulgar) Broken, in trouble.
->geek v. To kill.
->go-gang n. A vehicular gang.
->hacker n. Someone who illegally interacts with the Matrix, either by
-using a cyberdeck (as a “decker”) or with the power of their mind (as
-a “technomancer”).
->halfer n. (vulgar) A dwarf.
->hoi interject. (Dutch) Hi, a familiar form of greeting.
->hoop n. (vulgar) A common curse word referring to a person’s backside.
->hose v. Louse up. Screw up.
->ice n. Security software. From “intrusion countermeasures” or IC.
->jack v. To connect or disconnect to the Matrix or other device via a jack.
-Use jack in to mean establishing the connection, jack out to mean
-breaking a connection. Using jack alone refers to changing from one
-state to the other.
->jander v. To walk in an arrogant yet casual manner; to strut.
->jing n. Money, usually cash.
->keeb n. (vulgar) An elf.
->kobun n. (Japanese) A member of a Yakuza clan.
->meat n. A physical body. Pertaining to the physical world. Organs
-harvested for sale.
->merc n. A mercenary.
->mojo n. (Caribbean) Magic. A spell.
->Mr. Johnson n. Refers to an anonymous employer or corporate agent,
-regardless of gender or national origin.
->mundane n. (vulgar) Non-magician. adj. Non-magical.
->nutrisoy n. A cheaply processed food product derived from soybeans
->nuyen n. The world’s standard currency.
->omae n. A close friend. Can be used sarcastically.
->organlegging v. Trading in organs or cyberware harvested from formerly
-living people.
->oyabun n. (Japanese) The head of a Yakuza clan.
->pawn n. (derogatory) Street slang for Knight Errant officers
->paydata n. A datafile worth money on the black market.
->pixie n. (vulgar) An elf. An elf poser.
->plex n. A metropolitan complex, short for metroplex.
->poli n. A policlub or a policlub member. adj. Pertaining to a policlub.
->razorgirl n. A female with extensive combat enhancements.
->razorguy n. A male with extensive combat enhancements.
->roke adj. Overly elaborate or unnecessarily detailed. From a shortening
-of Baroque.
->samurai n. (Japanese) Mercenary or muscle for hire. Implies an honor
-code or a good reputation.
->sarariman n. (Japanese) A corporate employee. From a mispronunciation
-of salaryman.
->screamer n. Credstick or other ID that triggers alarms if used.
->scrip n. A currency that is not nuyen, usually referring to currency
-issued by a megacorporation.
->simsense n. A sensory broadcast or recording that lets the viewer feel
-and experience what the participants feel and experience.
->SIN n. System Identification Number. Identification number assigned to
-each person in the society.
->SINless adj. Lacking a SIN. n. A SINless person.
->SINner n. A person with a SIN. An honest person.
->slot n. (vulgar) Mild curse word referring to female genitalia. v. To insert
-a chip or credstick into chip or credstick reading device.
->slot and run v. Hurry up. Get to the point. Move it.
->so ka (Japanese) I understand. I get it.
->soykaf n. Ersatz coffee substitute made from soybeans.
->sprawl n. A metroplex (see plex); v. fraternize below one’s social level.
->squat n. Abandoned urban area used for housing. (vulgar) A dwarf.
->squishy n. (vulgar) A dwarf, elf, or human. Usually used by orks and trolls.
->Star, the n. The police. Originally referring to Lone Star specifically.
->static n. Trouble, usually social in nature.
->swag adj. Awesome.
->trideo n. The three-dimensional successor to video. Trid for short.
->trog n. (vulgar) An ork or troll. From troglodyte.
->tusker n. (vulgar) An ork or troll.
->vatjob n. A person with extensive cyberware replacement, reference
-is to a portion of the process during which the patient must be
-submerged in nutrient fluid.
->wagemage n. A magician (usually mage) employed by a corporation.
->wageslave n. A low-level corporate employee.
->wetwork n. Assassination. Murder.
->wired adj. Equipped with cyberware, especially increased reflexes.
->wiz adj. Wonderful, excellent.
->wizard n. A magician, usually a mage.
->wizworm n. A dragon.
->Yak n. (Japanese) Yakuza. Either a clan member or a clan itself.
->zaibatsu n. (Japanese) A megacorporation.
-
 </p>
+
+<p>>breeder n. Ork slang for a “normal” human.</p>
+<p>>buzz v. Go away. Buzz off.</p>
+<p>>chill adj. Good, cool, acceptable.</p>
+<p>>chip truth n. A fact or honest statement.</p>
+<p>>chipped adj. Senses, skills, reflexes, muscles, and so on, enhanced
+by cyberware.</p>
+<p>>chrome n. Cyberware, especially obvious enhancements.</p>
+<p>>chummer n. Friend, used in the same sense as “pal” or “buddy.”</p>
+<p>>clip n. A box magazine for a firearm.</p>
+<p>>comm n. Short for commlink, your phone, handheld computer, music
+player, game device, and more in the palm of your hand.</p>
+<p>>corp n. Corporation. adj. Corporate.</p>
+<p>>cred n. Money. Reputation, especially good reputation.</p>
+<p>>dandelion eater n. (vulgar) An elf.</p>
+<p>>dataslave n. Corporate decker or other data-processing employee.</p>
+<p>>datasteal n. Theft of data from a computer, usually by decking.</p>
+<p>>deck n. A cyberdeck. v. To use a cyberdeck, usually illegally.</p>
+<p>>decker n. A person who illegally uses a cyberdeck.</p>
+<p>>deckhead n. Simsense abuser.</p>
+<p>>drek n. (vulgar) Feces. A common curse word.</p>
+<p>>dump v. To be involuntarily ejected from the Matrix.</p>
+<p>>dumpshock n. The painful sensation of being forcibly ejected from the
+Matrix while deeply involved in multi-sensory interactions.</p>
+<p>>exec n. A corporate executive.</p>
+<p>>frag v. (vulgar) Common swear word referring to the act of copulation.</p>
+<p>>fragged adj. (vulgar) Broken, in trouble.</p>
+<p>>geek v. To kill.</p>
+<p>>go-gang n. A vehicular gang.</p>
+<p>>hacker n. Someone who illegally interacts with the Matrix, either by
+using a cyberdeck (as a “decker”) or with the power of their mind (as
+a “technomancer”).</p>
+<p>>halfer n. (vulgar) A dwarf.</p>
+<p>>hoi interject. (Dutch) Hi, a familiar form of greeting.</p>
+<p>>hoop n. (vulgar) A common curse word referring to a person’s backside.</p>
+<p>>hose v. Louse up. Screw up.</p>
+<p>>ice n. Security software. From “intrusion countermeasures” or IC.</p>
+<p>>jack v. To connect or disconnect to the Matrix or other device via a jack. Use jack in to mean establishing the connection, jack out to mean
+breaking a connection. Using jack alone refers to changing from one
+state to the other.</p>
+
+<p>>jander v. To walk in an arrogant yet casual manner; to strut.</p>
+<p>>jing n. Money, usually cash.</p>
+<p>>keeb n. (vulgar) An elf.</p>
+<p>>kobun n. (Japanese) A member of a Yakuza clan.</p>
+<p>>meat n. A physical body. Pertaining to the physical world. Organs
+harvested for sale.</p>
+<p>>merc n. A mercenary.</p>
+<p>>mojo n. (Caribbean) Magic. A spell.</p>
+<p>>Mr. Johnson n. Refers to an anonymous employer or corporate agent,
+regardless of gender or national origin.</p>
+<p>>mundane n. (vulgar) Non-magician. adj. Non-magical.</p>
+<p>>nutrisoy n. A cheaply processed food product derived from soybeans</p>
+<p>>nuyen n. The world’s standard currency.</p>
+<p>>omae n. A close friend. Can be used sarcastically.</p>
+<p>>organlegging v. Trading in organs or cyberware harvested from formerly
+living people.</p>
+<p>>oyabun n. (Japanese) The head of a Yakuza clan.</p>
+<p>>pawn n. (derogatory) Street slang for Knight Errant officers</p>
+<p>>paydata n. A datafile worth money on the black market.</p>
+<p>>pixie n. (vulgar) An elf. An elf poser.</p>
+<p>>plex n. A metropolitan complex, short for metroplex.</p>
+<p>>poli n. A policlub or a policlub member. adj. Pertaining to a policlub.</p>
+<p>>razorgirl n. A female with extensive combat enhancements.</p>
+<p>>razorguy n. A male with extensive combat enhancements.</p>
+<p>>roke adj. Overly elaborate or unnecessarily detailed. From a shortening
+of Baroque.</p>
+<p>>samurai n. (Japanese) Mercenary or muscle for hire. Implies an honor
+code or a good reputation.</p>
+<p>>sarariman n. (Japanese) A corporate employee. From a mispronunciation
+of salaryman.</p>
+<p>>screamer n. Credstick or other ID that triggers alarms if used.</p>
+<p>>scrip n. A currency that is not nuyen, usually referring to currency
+issued by a megacorporation.</p>
+<p>>simsense n. A sensory broadcast or recording that lets the viewer feel
+and experience what the participants feel and experience.</p>
+<p>>SIN n. System Identification Number. Identification number assigned to
+each person in the society.</p>
+<p>>SINless adj. Lacking a SIN. n. A SINless person.</p>
+<p>>SINner n. A person with a SIN. An honest person.</p>
+<p>>slot n. (vulgar) Mild curse word referring to female genitalia. v. To insert
+a chip or credstick into chip or credstick reading device.</p>
+<p>>slot and run v. Hurry up. Get to the point. Move it.</p>
+<p>>so ka (Japanese) I understand. I get it.</p>
+<p>>soykaf n. Ersatz coffee substitute made from soybeans.</p>
+<p>>sprawl n. A metroplex (see plex); v. fraternize below one’s social level.</p>
+<p>>squat n. Abandoned urban area used for housing. (vulgar) A dwarf.</p>
+<p>>squishy n. (vulgar) A dwarf, elf, or human. Usually used by orks and trolls.</p>
+<p>>Star, the n. The police. Originally referring to Lone Star specifically.</p>
+<p>>static n. Trouble, usually social in nature.</p>
+<p>>swag adj. Awesome.</p>
+<p>>trideo n. The three-dimensional successor to video. Trid for short</p>.
+<p>>trog n. (vulgar) An ork or troll. From troglodyte.</p>
+<p>>tusker n. (vulgar) An ork or troll.</p>
+<p>>vatjob n. A person with extensive cyberware replacement, reference
+is to a portion of the process during which the patient must be
+submerged in nutrient fluid.</p>
+<p>>wagemage n. A magician (usually mage) employed by a corporation.</p>
+<p>>wageslave n. A low-level corporate employee.</p>
+<p>>wetwork n. Assassination. Murder.</p>
+<p>>wired adj. Equipped with cyberware, especially increased reflexes.</p>
+<p>>wiz adj. Wonderful, excellent.</p>
+<p>>wizard n. A magician, usually a mage.</p>
+<p>>wizworm n. A dragon.</p>
+<p>>Yak n. (Japanese) Yakuza. Either a clan member or a clan itself.</p>
+<p>>zaibatsu n. (Japanese) A megacorporation.</p>
+
 
 </body>
 </html>
