--- a/pages/shadows.html
+++ b/pages/shadows.html
@@ -120,7 +120,7 @@ As long as you can pay the price.
 <p>
 
 </p>
-<p>><a href="https://jakabe.github.io/shadowrunpages/sin.html">SIN</a></p>
+<p>><a href="https://jakabe.github.io/shadowrunpages/pages/sin.html">SIN</a></p>
 <p>><a href="https://jakabe.github.io/shadowrunpages/pages/run.html">Where to run</a></p>
 
 
