--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src='https://unpkg.com/css-vars-ponyfill@2/dist/css-vars-ponyfill.min.js'></script><script  src="./script.js"></script>
 <script> 
  // grab element you want to hide
-const elem = document.querySelector(#terminal > div.terminal-scroller > div.terminal-wrapper > div.terminal-output > div:nth-child(1));
+const elem = document.querySelector("#terminal > div.terminal-scroller > div.terminal-wrapper > div.terminal-output > div:nth-child(1)");
 // remove element
 elem.parentNode.removeChild(elem); 
  </script>
