--- a/pages/slang/slang.html
+++ b/pages/slang/slang.html
@@ -4,7 +4,7 @@
   <head> 
     <title>ShadowRunnerSlang</title> 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="https://jakabe.github.io/shadowrunpages/style.css">
   </head> 
   <body> 
     <script type="text/javascript" src="slang_script.js"> 
