--- a/briefing/briefing.html
+++ b/briefing/briefing.html
@@ -1,45 +1,17 @@
 <!DOCTYPE html>
 
-<html lang="en" dir="ltr"> 
-<head>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Titillium+Web">
-    <link rel="stylesheet" href="style.css">
-
-    <meta charset = "utf-8">
+<html> 
+  <head> 
+    <title>ShadowRunnerSlang</title> 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
+    <link rel="stylesheet" type="text/css" href="https://jakabe.github.io/shadowrunpages/style.css">
+  </head> 
+  <body> 
+    <script type="text/javascript" src="briefing_script.js"> 
+    </script> 
+    <div id="console"></div> 
     
-
-
-</head>
-  <style>
-body {
-    color: #20C20E;
-    text-align: left;
-    background-color:black;
-}
-p {
-    color: #20C20E;
-    text-align: left;
-}
-a {
+    </script>
+  </body> 
+</html> 
   
-}
-a:link {
-  color: hotpink;
-}
-a:visited {
-  color: rgb(168, 15, 173);
-}
-
-</style>
-  
-<body>
-Briefing Package
-<p>><a href="https://jakabe.github.io/shadowrunpages/pages/slang/slang.html">common slang</a></p>
-<p>><a href="https://jakabe.github.io/shadowrunpages/pages/life.html">life in the sixth world</a></p>
-<p>><a href="https://jakabe.github.io/shadowrunpages/pages/team.html">team members</a></p>
-<p>><a href="https://jakabe.github.io/shadowrunpages/pages/mission_one.html">your first mission</a></p>
-<p>><a href="https://jakabe.github.io/shadowrunpages/pages/theboss.html">the boss</a></p>
-
-</body>
-</html>
